--- a/service-reservation/src/main/resources/application.properties
+++ b/service-reservation/src/main/resources/application.properties
@@ -2,12 +2,17 @@ spring.application.name=service-reservation
 server.port=8083
 
 # H2
-spring.datasource.url=jdbc:h2:mem:reservationdb
+spring.datasource.url=jdbc:h2:mem:service_reservations
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
