--- a/service-reservation/src/main/resources/application.properties
+++ b/service-reservation/src/main/resources/application.properties
@@ -13,12 +13,30 @@ spring.h2.console.path=/h2-console
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.client.healthcheck.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.lease-renewal-interval-in-seconds=30
+
+# Logging
+logging.level.com.microcommerce.service_reservation=INFO
+logging.level.org.springframework.web=INFO
+
+# Actuator (pour Eureka health checks)
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+management.health.eureka.enabled=true
+
+# Actuator
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
 
 # Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
