--- a/service-front-web/src/main/resources/application.properties
+++ b/service-front-web/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=front-web
+server.port=9091
+service.vehicule.base-url=http://localhost:8082
+service.reservation.base-url=http://localhost:8083
+service.client.base-url=http://localhost:8081
+spring.thymeleaf.cache=false
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+logging.level.root=INFO
+logging.level.com.locationvoiture=DEBUG
+app.use-test-data=false
+
