--- a/service-vehicules/src/main/resources/application.properties
+++ b/service-vehicules/src/main/resources/application.properties
@@ -1,23 +1,11 @@
 server.port=8082
-spring.application.name=service-vehicules
 
-
-spring.datasource.url=jdbc:h2:file:./data/vehicule_db
+spring.datasource.url=jdbc:h2:file:/home/user/Documents/JAVA/Springboot_location_vehicule/Location_voitures/docs/locationvehicule_project_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
-spring.jpa.show-sql=false
 
-# Activer Eureka Client
-eureka.client.enabled=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
 
-# Informations de l'instance
-eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=localhost
-eureka.instance.instance-id=${spring.application.name}:${server.port}
