final commit - Back is ready

--- a/service-vehicules/src/main/resources/application.properties
+++ b/service-vehicules/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8082
+spring.application.name=service-vehicule
+
 
 spring.datasource.url=jdbc:h2:file:/home/user/Documents/JAVA/Springboot_location_vehicule/Location_voitures/docs/locationvehicule_project_db
 spring.datasource.driverClassName=org.h2.Driver
