--- a/service-client/src/main/resources/application.properties
+++ b/service-client/src/main/resources/application.properties
@@ -39,3 +39,7 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 spring.security.user.name=admin
 spring.security.user.password=admin
 
+# SWAGGER / OPENAPI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
