--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
-# .gitlab-ci.yml à mettre à la racine de location-voitures
+# Utilisation de Maven avec Java 21
+image: maven:3.9.2-eclipse-temurin-21
 
 stages:
   - build
@@ -7,7 +8,7 @@ stages:
 
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
-  MAVEN_CLI_OPTS: "-B -s .m2/settings.xml --batch-mode"
+  MAVEN_CLI_OPTS: "-B --batch-mode"
 
 # ----------------------------
 # Build des microservices
@@ -82,5 +83,5 @@ deploy-all:
   stage: deploy
   script:
     - echo "Déploiement des services..."
-    # ici tu peux mettre tes commandes docker/k8s ou autre
-  when: manual  # le déploiement se fait manuellement
+    # ici tu peux ajouter tes commandes docker/k8s ou autre
+  when: manual  # déclenchement manuel
