--- a/service-client/src/main/resources/application.properties
+++ b/service-client/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 # APPLICATION
 spring.application.name=service-client
-server.port=8081
+server.address=0.0.0.0
+server.port=8080
 
 # EUREKA CLIENT
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # HEALTH CHECK
