--- a/service-vehicules/src/main/resources/application.properties
+++ b/service-vehicules/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=8082
-spring.application.name=service-vehicule
+spring.application.name=service-vehicules
+server.address=0.0.0.0
+server.port=8080
 
 
 spring.datasource.url=jdbc:h2:file:/home/user/Documents/JAVA/Springboot_location_vehicule/Location_voitures/docs/locationvehicule_project_db
