--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,14 @@ services:
 
 stages:
   - build_and_test
-  - docker_build
-  - docker_push
+  - docker_build_push
   - deploy
 
 variables:
   DOCKER_DRIVER: overlay2
-  DOCKER_USER: "$CI_REGISTRY_USER"    # ou ton utilisateur DockerHub
-  DOCKER_PASSWORD: "$CI_REGISTRY_PASSWORD"  # ou ton mot de passe DockerHub
-  DOCKER_COMPOSE_VERSION: "2.21.0"    # version compose CLI
+  DOCKER_USER: "$CI_REGISTRY_USER"        # ou ton utilisateur DockerHub
+  DOCKER_PASSWORD: "$CI_REGISTRY_PASSWORD"
+  DOCKER_COMPOSE_VERSION: "2.21.0"        # version compose CLI
 
 # ----------------------------
 # Build et test des microservices
@@ -58,22 +57,20 @@ service-vehicules-build-test:
     expire_in: 1 hour
 
 # ----------------------------
-# Build des images Docker
+# Build, tag et push des images Docker (tout dans un job pour éviter les conflits)
 # ----------------------------
-docker-build:
-  stage: docker_build
+docker-build-and-push:
+  stage: docker_build_push
+  image: docker:24.0.2
+  services:
+    - docker:24.0.2-dind
   script:
-    - docker build -t $DOCKER_USER/service-client:v2 ./service-client
-    - docker build -t $DOCKER_USER/service-vehicules:v2 ./service-vehicules
-    - docker build -t $DOCKER_USER/service-reservation:v2 ./service-reservation
-
-# ----------------------------
-# Push des images Docker
-# ----------------------------
-docker-push:
-  stage: docker_push
-  script:
+    - echo "Construction des images Docker"
+    - docker build -t $DOCKER_USER/service-client:latest ./service-client
+    - docker build -t $DOCKER_USER/service-vehicules:latest ./service-vehicules
+    - docker build -t $DOCKER_USER/service-reservation:latest ./service-reservation
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
+    - echo "Push des images Docker vers le registry"
     - docker push $DOCKER_USER/service-client:latest
     - docker push $DOCKER_USER/service-vehicules:latest
     - docker push $DOCKER_USER/service-reservation:latest
@@ -83,11 +80,11 @@ docker-push:
 # ----------------------------
 deploy-all:
   stage: deploy
-  image: docker:24
+  image: docker:24.0.2
   services:
-    - docker:24-dind
+    - docker:24.0.2-dind
   script:
-    - apk add --no-cache curl  # si besoin pour vérifier compose
+    - echo "Déploiement via docker-compose"
     - docker compose -f docker-compose.yml pull
     - docker compose -f docker-compose.yml up -d --remove-orphans
   only:
