--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ deploy-all:
     - docker:24.0.2-dind
   script:
     - echo "Déploiement via docker-compose"
-    - docker compose -f docker-compose.yml pull
-    - docker compose -f docker-compose.yml up -d --remove-orphans
+    - docker compose -f docker-compose.yml up -d --build --remove-orphans
+
   only:
     - main
